<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="headline">Here\'s Update Today</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="add_task">Add Task</string>
    <string name="close">Close</string>
    <string name="deadline">Deadline</string>
    <string name="location">Location</string>
    <string name="task_type">Task Type</string>
    <string name="basic">Basic</string>
    <string name="urgent">Urgent</string>
    <string name="important">Important</string>
    <string name="save_task">Save Task</string>
    <string name="strip_text">-</string>
    <string name="my_new_task">My New Task</string>
    <string name="where_is_location">Where is location?</string>
    <string name="when_your_task_is_deadline">When your task is deadline?</string>
    <string name="color_task">Color Task</string>
    <string name="what_you_do">What you do?</string>
    <string name="everyday">Everyday</string>
    <string name="edit">Edit</string>
    <string name="check">Check</string>
</resources>