<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetAddTask"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="16dp"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                    <ImageButton
                        android:id="@+id/btnClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/close"
                        android:src="?attr/homeAsUpIndicator"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="12dp"
                        android:layout_toStartOf="@id/btnNotification"
                        android:layout_toEndOf="@id/btnClose"
                        android:gravity="center"
                        android:text="@string/add_task"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btnNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/notification"
                        android:src="@drawable/ic_nofitication_none"
                        android:visibility="invisible"
                        app:tint="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/gray"
                        android:visibility="invisible" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="24dp">

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/color_task"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTaskColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:listitem="@layout/item_task_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/lightGray" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutTitle"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/my_new_task"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:endIconDrawable="@drawable/ic_color_task"
                    app:endIconMode="custom"
                    app:endIconTint="@color/yellow"
                    app:expandedHintEnabled="false"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtTitleTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:hint="@string/what_you_do"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:paddingStart="0dp"
                        android:paddingTop="38dp"
                        android:paddingEnd="0dp"
                        android:textColorHint="@color/lightGray500"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="LabelFor"
                        tools:targetApi="m"
                        tools:text="Meetings With Client About UI / UX Designer" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvDateDeadline"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/deadline"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:expandedHintEnabled="false"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtDeadlineTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:drawableEnd="@drawable/ic_date_range"
                        android:hint="@string/when_your_task_is_deadline"
                        android:importantForAutofill="no"
                        android:inputType="datetime"
                        android:maxLines="1"
                        android:paddingStart="0dp"
                        android:paddingTop="38dp"
                        android:paddingEnd="0dp"
                        android:textColorHint="@color/lightGray500"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="LabelFor"
                        tools:text="10 August 2021" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvLocation"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/location"
                    app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
                    app:expandedHintEnabled="false"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtLocationTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:drawableEnd="@drawable/ic_location_on"
                        android:hint="@string/where_is_location"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingStart="0dp"
                        android:paddingTop="38dp"
                        android:paddingEnd="0dp"
                        android:textColorHint="@color/lightGray500"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableTint="@color/black"
                        tools:ignore="LabelFor"
                        tools:text="Tegal, Indonesia" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/task_type"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/typeTaskBasic"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_circle_black"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/basic"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        app:backgroundTint="@null"
                        tools:ignore="TouchTargetSizeCheck" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/typeTaskUrgent"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cirlce_stroke_black"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/urgent"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:backgroundTint="@null"
                        tools:ignore="TouchTargetSizeCheck" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/typeTaskImportant"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_cirlce_stroke_black"
                        android:paddingStart="2dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="2dp"
                        android:paddingBottom="2dp"
                        android:text="@string/important"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:backgroundTint="@null"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/lightGray" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="bottom"
                android:background="@drawable/bg_circle_black"
                android:text="@string/save_task"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                tools:ignore="TouchTargetSizeCheck"
                tools:targetApi="m" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>