<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tagTask1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tag_task"
            android:insetTop="4dp"
            android:insetBottom="4dp"
            android:text="@string/urgent"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp,TouchTargetSizeCheck,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tagTask2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tag_task"
            android:insetTop="4dp"
            android:insetBottom="4dp"
            android:text="@string/everyday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/tagTask1"
            app:layout_constraintStart_toEndOf="@+id/tagTask1"
            app:layout_constraintTop_toTopOf="@+id/tagTask1"
            tools:ignore="SmallSp,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/strip_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ivDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagTask1"
            tools:text="Taking My SIster To School\nYeah right now" />

        <ImageButton
            android:id="@+id/ivEdit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/bg_edit"
            android:contentDescription="@string/edit"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/tagTask2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tagTask2"
            app:srcCompat="@drawable/ic_edit"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/ivDate"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/deadline"
            app:layout_constraintBottom_toTopOf="@+id/ivTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle"
            app:srcCompat="@drawable/ic_date_range"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/strip_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivDate"
            app:layout_constraintEnd_toStartOf="@+id/ivCheck"
            app:layout_constraintStart_toEndOf="@+id/ivDate"
            app:layout_constraintTop_toTopOf="@+id/ivDate"
            tools:ignore="TextContrastCheck"
            tools:text="10 Februari 2022" />

        <ImageView
            android:id="@+id/ivTime"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/deadline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_time"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/strip_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivTime"
            app:layout_constraintEnd_toStartOf="@+id/ivCheck"
            app:layout_constraintStart_toEndOf="@+id/ivTime"
            app:layout_constraintTop_toTopOf="@+id/ivTime"
            tools:ignore="TextContrastCheck"
            tools:text="07:30 (Remind At 07:15)" />

        <ImageView
            android:id="@+id/ivCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_check"
            app:tint="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>