<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMain"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:contentScrim="@color/white"
        app:elevation="0dp"
        app:statusBarScrim="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:paddingHorizontal="24dp">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/welcome_back"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/headline"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/btnSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bg_circle_black"
                        android:contentDescription="@string/search"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:gravity="top"
                android:minHeight="?attr/actionBarSize"
                app:contentInsetEnd="8dp"
                app:contentInsetStart="8dp"
                app:elevation="0dp"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/white">

                    <ImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/menu"
                        android:src="@drawable/ic_menu"
                        app:tint="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="12dp"
                        android:layout_toStartOf="@id/btnNotification"
                        android:layout_toEndOf="@id/btnMenu"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btnNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="@android:color/transparent"
                        android:contentDescription="@string/notification"
                        android:src="@drawable/ic_nofitication_none"
                        app:tint="@color/black" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabsMain"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:layout_scrollFlags="snap"
                app:tabBackground="@android:color/transparent"
                app:tabGravity="fill"
                app:tabIconTint="@color/white"
                app:tabIndicator="@drawable/tab_indicator_selected_main"
                app:tabIndicatorAnimationDuration="100"
                app:tabIndicatorAnimationMode="linear"
                app:tabIndicatorColor="@color/black"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="stretch"
                app:tabInlineLabel="true"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/CustomTabStyle"
                app:tabTextColor="@color/black" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <View
        android:id="@+id/viewLayerMain"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/bg_layer_white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="24dp"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:icon="@drawable/ic_add_box"
        app:iconTint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>